--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
         "react-scripts": "3.0.0"
     },
     "devDependencies": {
+        "babel-cli": "^6.26.0",
+        "babel-plugin-react-intl": "^3.0.1",
+        "babel-preset-react": "^6.24.1",
         "react-dev-utils": "^9.0.0"
     },
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
+        "extract-messages": "set NODE_ENV=production && babel src >NUL",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
